# locket

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  docker-publish.yml
docker/: Dockerfile  docker-bake.hcl
docs/: CONFIGURATION.md  compose.md  exec.md  inject.md  volume.md
docs/providers/: bao.md
src/: compose.rs
src/cmd/: compose.rs
src/cmd/compose/: up.rs
src/cmd/config/: compose.rs
src/provider/: bao.rs  references.rs
src/provider/references/: bao.rs
