[package]
name = "locket"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Brian Bradley <brian.bradley.p@gmail.com>"]
description = "Helper tool for secret injection as a process dependency"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/locket"
readme = "README.md"
keywords = ["secrets", "docker"]
categories = ["command-line-utilities", "config"]

[workspace]
members = [".", "locket_derive", "xtask"]

[workspace.package]
version = "0.17.2"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/bpbradley/locket"
homepage = "https://github.com/bpbradley/locket"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1" }
serde_json = "1"
indexmap = "2"
toml = "1"

# locket_derive deps
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# locket deps
locket_derive = { path = "./locket_derive", version = "0.17.2" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
notify = "8"
tempfile = "3"
thiserror = "2"
walkdir = "2"
secrecy = { version = "0.10.3", features = ["serde"] }
sysexits = "0.13"
async-trait = "0.1"
sanitize-filename = "0.6"
humantime = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
url = { version = "2", features = ["serde"] }
nix = { version = "0.31", features = ["user", "fs"] }
percent-encoding = { version = "2.3" }
bitwarden = { version = "2", features = ["secrets"] }
uuid = { version = "1", features = ["serde"] }
dotenvy = "0.15"
serde_urlencoded = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = "0.5"
tower-service = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# bitwarden dependencies are causing issues in reqwest >= 0.13.
# I don't see an immediate fix for this, so for now will revert to 0.12.24+ and use rustls-tls-webpki-roots again.
# The only other way to fix it that I could find was to install 0.13 reqwest with rustls-no-provider,
# and then manually call `let _ = rustls::crypto::ring::default_provider().install_default();` to handle certs manually.
# But bitwarden crate still requires reqwest < 0.13, so I might as well use the same version for the whole crate.
reqwest = { version = ">=0.12.24, <0.13", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
regex = "1.7"
anyhow = "1"

# dev deps
assert_fs = "1"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
push = true
publish = true
consolidate-commits = true
sign-commit = false
sign-tag = false
allow-branch = ["main"]
pre-release-hook = ["sh", "-c", "cargo fmt -- --check && cargo xtask docs && cargo clippy -- -D warnings && cargo test --locked"]

[features]
# Base release features
op = ["tokio/process", "dep:percent-encoding"]
connect = ["dep:reqwest", "dep:percent-encoding"]
bws = ["dep:bitwarden", "dep:uuid"]
compose = ["dep:dotenvy"]
infisical = ["dep:reqwest", "dep:serde_urlencoded", "dep:percent-encoding", "dep:regex", "dep:uuid"]
exec = ["dep:dotenvy", "nix/signal", "nix/term", "tokio/process"]
volume = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:tower", "dep:tower-service", "nix/mount", "dep:chrono"]

# Used to compile with mock types for testing
testing = []
# Generates introspection types that are necessary for documentation generation
locket-docs = []

full = ["op", "connect", "bws", "infisical", "compose", "exec", "volume"]
dev = ["locket-docs", "testing", "full"]
default = ["full"]

[dependencies]
locket_derive.workspace = true
clap = { workspace = true, features = ["env", "string"] }
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
tempfile.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
secrecy.workspace = true
sysexits.workspace = true
indexmap.workspace = true
async-trait.workspace = true
sanitize-filename.workspace = true
humantime.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
url.workspace = true
toml.workspace = true
nix.workspace = true
percent-encoding = { workspace = true, optional = true }
bitwarden = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
serde_urlencoded = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

[dev-dependencies]
assert_fs.workspace = true

[lib]
name = "locket"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
